@@ -2,6 +2,7 @@
 
 	* Fixing last issues in STAR_2006_S6500200 and setting it to
 	VALIDATED.
+	* Noramlise STAR_2006_S6870392 to cross-section
 
 2009-11-09  Andy Buckley  <andy@insectnation.org>
 
